cattle card generated

--- a/package.json
+++ b/package.json
@@ -3,12 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "@progress/kendo-data-query": "^1.6.0",
+    "@progress/kendo-drawing": "^1.17.1",
+    "@progress/kendo-licensing": "^1.2.2",
+    "@progress/kendo-react-animation": "^5.7.0",
+    "@progress/kendo-react-buttons": "^5.7.0",
+    "@progress/kendo-react-data-tools": "^5.7.0",
+    "@progress/kendo-react-dateinputs": "^5.7.0",
+    "@progress/kendo-react-dropdowns": "^5.7.0",
+    "@progress/kendo-react-grid": "^5.7.0",
+    "@progress/kendo-react-inputs": "^5.7.0",
+    "@progress/kendo-react-intl": "^5.7.0",
+    "@progress/kendo-react-pdf": "^5.7.0",
+    "@progress/kendo-react-treeview": "^5.7.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-popper": "^2.3.0",
+    "react-qr-code": "^2.0.8",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
